--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 
       <div class="site-nav">
 
-        <label for="" class="site-nav">
+        <label for="toggle" for="toggle" class="site-nav">
         
-          <i class="fas fa-bars toggle-bars" ></i>
-          <i class="fas fa-times toggle-times"></i>
-          <input type="checkbox" class="toggle-check">
+          <input type="checkbox" id="toggle"  class="check">
+          <i class="fas fa-bars togler"></i>
+          <i class="fas fa-times togler"></i>
+
 
         <ul class="site-nav__list">
           <li class="site-nav__item"><a href="#">Home</a></li>
@@ -58,8 +59,8 @@
       <input type="text" id="search"  class="site-nav__search-input" placeholder="Search">
       <i  class="fas fa-search"></i>
       </label>
-
-      </div>
+    </div>
+    
 
     </div>
    </nav>
